# townling

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.ai/context/: design-document.md  system-spec.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
backend/apps/core/: tests.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
game/: .dockerignore  Dockerfile  README.md  export_presets.cfg  icon.svg.import  nginx.conf  project.godot
game/assets/: ATTRIBUTIONS.md  README.md
game/assets/characters/: contents.png.import
game/assets/city/: contents.png.import  sample.png.import
game/assets/kenney/: building-garage.glb.import  building-small-a.glb.import  building-small-b.glb.import  building-small-c.glb.import  building-small-d.glb.import  grass-trees-tall.glb.import  grass-trees.glb.import  grass.glb.import  pavement-fountain.glb.import  pavement.glb.import  road-corner.glb.import  road-intersection.glb.import  road-split.glb.import  road-straight-lightposts.glb.import  road-straight.glb.import
game/assets/ui/: bolt.png.import  coin.png.import  heart.png.import  mood_exhausted.png.import  mood_fine.png.import  mood_happy.png.import  mood_tired.png.import  (+3 more)
game/data/: economy.json  events.json  gigs.json
game/docker-entrypoint.d/: 40-townling-config.sh
game/scenes/: diorama.tscn  main.tscn
game/scripts/: audio.gd.uid  diorama.gd  diorama.gd.uid  game_state.gd  game_state.gd.uid  main.gd
game/tests/: test_game_state.gd  test_game_state.gd.uid
(+139 files in other folders)
